# kidscampfinder

./: .gitignore  README.md  TODO.md
crawler/: discovery_seed.json  pyproject.toml  test_extract.json
crawler/coursecrawler/: __init__.py  config.py  dedup.py  discovery.py  normalize.py  run.py  schema.sql
crawler/coursecrawler/adapters/: ferienprogramm.py  frilingue.py  jugendsportcamps.py
crawler/discovery_local/: README.md  discover.py
crawler/discovery_local/discovery_out/: hits.json  social.json
crawler/discovery_local/discovery_out/pages/: 01885c56db0a78e3.json  0385b4968df0cdec.json  03fa8b164bc93f06.json  04e072e8969bc2bf.json  055d6bc213b7cc9e.json  06f52dbff445395b.json  091844190f9ffbc9.json  09915cffd878859a.json  0a6abf706339f354.json  0c53dbae4d4ebcc6.json  0cf3f76038f61b41.json  0cf50413b971a4fb.json  0e0c9a050d643398.json  11619248b57681d1.json  127c267fb5542a06.json  12d29a859396fdfc.json  151cae2226caf559.json  155c77d1f64cd3d3.json  15ca8531182d2bcf.json  15cd1cd92aa71441.json  16829c20429e031b.json  169a1329e0ae75f9.json  174053baf8b21f49.json  1880a2c00a43f6c4.json  19d7ea1c5009fcba.json  1e026d2e1208879f.json  1e9808bee4b3924d.json  2086bf0d43e20410.json  227ed1cee6921214.json  23ba7a0028c54792.json  2751a631124ca9cd.json  279d8be47ec8afc1.json  2919b943079569ac.json  29b3a5a94d416f40.json  2a3bf4a26ee8a4aa.json  (+192 more)
crawler/kidscampfinder/: __init__.py  config.py  db.py  discovery.py  geo.py  http.py  images.py  models.py  run.py
crawler/kidscampfinder/adapters/: __init__.py  base.py  codora.py  feriennet.py  frilingue.py
docs/: PRD.md  (+9 more)
(+30 files in other folders)
